# revcyclemgmt-edi-validation-harness

./: .gitignore  COMPLIANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: implementation-notes.md  optum-api-positioning.md  website-card-copy.md
output_demo/: edi_validation_report.json
src/revcyclemgmt_edi_validation/: __init__.py  cli.py  parser.py  proof_artifacts.py  rules.py  validator.py
tests/: test_validator.py
tests/fixtures/: invalid_837p_missing_clm.edi  invalid_control_numbers.edi  valid_270.edi  valid_271.edi  valid_275.edi  valid_276.edi  valid_277.edi  valid_277ca.edi  valid_835.edi  valid_837i.edi  valid_837p.edi  valid_999.edi
